# fallout-scrapper

./: .gitignore  README.md  pyproject.toml
data/: fallout.sqlite
f76/: cli.py
f76/scripts/: db_utils.py  parsing_utils.py  scrape_single_page.py
f76/scripts/scrape/: infra.py  junk_items_table.py  junk_locations.py  regions_and_locations.py
f76/sql/: schema.sql
scripts/: db_utils.py  scrape_single_page.py
sql/: schema.sql  top_lead_items.sql  top_steel_items.sql
sql/core_insights/: big_drop_items.sql  top_components_by_total_supply.sql
